# api/swagger-output.json
@@ -23,7 +23,7 @@
         "tags": [
           "Quiz"
         ],
-        "description": "Get all approved quizzes",
+        "description": "Get all quizzes",
         "produces": [
           "application/json"
         ],
@@ -509,6 +509,102 @@
           }
         }
       }
+    },
+    "/questions": {
+      "get": {
+        "tags": [
+          "Question"
+        ],
+        "description": "Get all questions",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "skip",
+            "in": "query",
+            "description": "How many elements to skip. Used for paging.",
+            "required": false,
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "take",
+            "in": "query",
+            "description": "How many elements to take. Used for paging.",
+            "required": false,
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "description": "Sort by field",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "description": "Sort order.",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "query",
+            "in": "query",
+            "description": "Search by name.",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "quizzes",
+            "in": "query",
+            "description": "Search by list of quizzes. Example: 1,2,3",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "topics",
+            "in": "query",
+            "description": "Search by list of topics. Example: 1,2,3",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Questions fetched successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/QuestionSearchResult"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/QuestionSearchResult"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -740,13 +836,10 @@
             "example": "2020-03-31T00:00:00.000Z"
           },
           "questions": {
-            "type": "array",
-            "items": {
-              "xml": {
-                "name": "question"
-              },
-              "$ref": "#/components/schemas/Question"
-            }
+            "xml": {
+              "name": "questionarray"
+            },
+            "$ref": "#/components/schemas/QuestionArray"
           }
         },
         "xml": {
@@ -856,6 +949,67 @@
         },
         "xml": {
           "name": "QuizSearchResult"
+        }
+      },
+      "QuestionArray": {
+        "type": "array",
+        "items": {
+          "xml": {
+            "name": "question"
+          },
+          "$ref": "#/components/schemas/Question"
+        },
+        "xml": {
+          "name": "QuestionArray"
+        }
+      },
+      "QuestionSearchResult": {
+        "type": "object",
+        "properties": {
+          "search": {
+            "type": "string",
+            "example": "query string"
+          },
+          "topics": {
+            "type": "string",
+            "example": "1,2,3"
+          },
+          "quizzes": {
+            "type": "string",
+            "example": "1,2,3"
+          },
+          "sort": {
+            "type": "string",
+            "example": "name"
+          },
+          "order": {
+            "type": "string",
+            "example": "asc"
+          },
+          "skip": {
+            "type": "number",
+            "example": 0
+          },
+          "take": {
+            "type": "number",
+            "example": 10
+          },
+          "total": {
+            "type": "number",
+            "example": 100
+          },
+          "rows": {
+            "type": "array",
+            "items": {
+              "xml": {
+                "name": "questionarray"
+              },
+              "$ref": "#/components/schemas/QuestionArray"
+            }
+          }
+        },
+        "xml": {
+          "name": "QuestionSearchResult"
         }
       }
     }
